# esp32_repo

Esp32_project/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Esp32_project/components/aht20_driver/: CMakeLists.txt  aht20_driver.c
Esp32_project/components/aht20_driver/include/: aht20_driver.h
Esp32_project/components/bluetooth_component/: CMakeLists.txt  bluetooth_component.c
Esp32_project/components/bluetooth_component/include/: bluetooth_component.h
Esp32_project/components/bmp280_driver/: CMakeLists.txt  bmp280_driver.c
Esp32_project/components/bmp280_driver/include/: bmp280_driver.h
Esp32_project/components/i2c_bus/: CMakeLists.txt  i2c_bus.c
Esp32_project/components/i2c_bus/include/: i2c_bus.h
Esp32_project/components/lsm6ds3_driver/: CMakeLists.txt  lsm6ds3_driver.c
Esp32_project/components/lsm6ds3_driver/include/: lsm6ds3_driver.h
Esp32_project/components/mqtt_component/: CMakeLists.txt
Esp32_project/components/my_joystick/: CMakeLists.txt  joystick.c
Esp32_project/components/my_led/: CMakeLists.txt  led.c
Esp32_project/components/my_led/include/: led.h
Esp32_project/components/my_servo/: CMakeLists.txt  my_servo.c
Esp32_project/components/my_wifi/: CMakeLists.txt  my_wifi.c
Esp32_project/components/spi_bus/: CMakeLists.txt  spi_bus.c
Esp32_project/components/stepper/: CMakeLists.txt  stepper.c
Esp32_project/components/uart_communicator/: CMakeLists.txt  uart_communicator.c
Esp32_project/main/: CMakeLists.txt  idf_component.yml  main.c
Esp32_project/sensor/: CMakeLists.txt  Kconfig  sensor.c
(+8 files in other folders)
